# cpp_testing_sample

./: .gitignore  CMakeLists.txt  Consumer.cpp  Producer.cpp  README.md  producer.cpp  unit_test.cpp
.cache/clangd/index/: Generator.cpp.75E2F226EF3B1B3F.idx  Generator.h.CE4C37F3442A819F.idx  GeneratorTest.cpp.F8AE129EDE4FFD27.idx  Producer.cpp.420FA245D81F5C3B.idx  unit_test.cpp.DDE30C80A8636609.idx
Generator/: CMakeLists.txt  Generator.cpp  Generator.h  GeneratorTest.cpp
